--- a/gb/23/5/8/n13991543.md
+++ b/gb/23/5/8/n13991543.md
@@ -1,19 +1,19 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>美国会拟制定科技新法 从禁TikTok到规范AI</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/03/id13962558-555012-600x400.jpg" />
 <h6>美国国会两党计划制定法律，监管大科技公司和社交媒体平台。（Samira Bouaou／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2023年05月09日讯】（大纪元记者戴芙若综合报导）美国国会针对<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A4%BE%E4%BA%A4%E5%AA%92%E4%BD%93.md#1">社交媒体</a>平台带来的安全、隐私危害，以及<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BA%BA%E5%B7%A5%E6%99%BA%E8%83%BD.md#1">人工智能</a>机器如何<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%9B%91%E7%AE%A1.md#1">监管</a>等问题，两党议员都认为，联邦政府应该更好地监管这些大科技公司。</p>
-<p>目前，随着人们对中国公司字节跳动（ByteDance）拥有的TikTok（抖音海外版）引发的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%9B%BD%E5%AE%B6%E5%AE%89%E5%85%A8.md#1">国家安全</a>担忧加剧，父母越来越担心他们的孩子在网上看到的内容。对这些技术必须进行<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%9B%91%E7%AE%A1.md#1">监管</a>，国会山中形成的势头越来越大。</p>
+	<p>【大纪元2023年05月09日讯】（大纪元记者戴芙若综合报导）美国国会针对社交媒体平台带来的安全、隐私危害，以及人工智能机器如何监管等问题，两党议员都认为，联邦政府应该更好地监管这些大科技公司。</p>
+<p>目前，随着人们对中国公司字节跳动（ByteDance）拥有的TikTok（抖音海外版）引发的国家安全担忧加剧，父母越来越担心他们的孩子在网上看到的内容。对这些技术必须进行监管，国会山中形成的势头越来越大。</p>
 <p>参众两院的议员们提出了一系列两党法案，增加了达成共识的希望。</p>
 <p>但监管这个庞大行业的面临着重大阻力，因为这些科技公司一直在抵制政府的干预。</p>
 <p>拜登总统在2月的国情咨文演讲中指出，许多年轻人都在苦苦挣扎，“现在是时候”来通过两党立法，对科技公司进行个人数据的收集施加更严格的限制，并禁止向儿童投放有针对性的广告。</p>
-<p>拜登说：“我们最终必须让<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A4%BE%E4%BA%A4%E5%AA%92%E4%BD%93.md#1">社交媒体</a>公司对他们在我们孩子身上进行的牟利实验负责。”</p>
+<p>拜登说：“我们最终必须让社交媒体公司对他们在我们孩子身上进行的牟利实验负责。”</p>
 <h3>儿童安全</h3>
-<figure id="attachment_10082448" aria-describedby="caption-attachment-10082448" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/01/cyber.jpg"><img class="size-large wp-image-10082448" src="https://i.epochtimes.com/assets/uploads/2018/01/cyber-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-10082448" class="wp-caption-text">心理学家建议，对于12岁以下的儿童，不应让他们接触社交媒体。(Alain Jocard/AFP/Getty Images)</figcaption></figure>
+<figure id="attachment_10082448" aria-describedby="caption-attachment-10082448" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/01/cyber.jpg"><img decoding="async" class="size-large wp-image-10082448" src="https://i.epochtimes.com/assets/uploads/2018/01/cyber-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-10082448" class="wp-caption-text">心理学家建议，对于12岁以下的儿童，不应让他们接触社交媒体。(Alain Jocard/AFP/Getty Images)</figcaption></figure>
 <p>众议院和参议院的几项法案将试图让社交媒体和整个互联网，对于必须上网的儿童来说更安全。立法者列举了许多青少年在网络遇欺凌后自杀，或因社交媒体鼓动的危险行为而死亡的例子。</p>
 <p>在参议院，至少有两项关注儿童在线安全的法案。</p>
 <p>参议院商务委员会去年批准了参议员理查德·布卢门撒尔（Richard Blumenthal，康涅狄格州）和共和党参议员玛莎·布莱克本（Marsha Blackburn，田纳西州）的立法，要求社交媒体公司在运营方面更加透明，并将儿童安全设置设为默认，未成年人有可选择的功能，禁止向其推送令人上瘾的产品和内容。参议员们说，这些社交媒体平台应该具备“基于安全的设计”。</p>
@@ -21,67 +21,57 @@
 <p>四名参议员，民主党参议员布赖恩·沙茨（Brian Schatz，夏威夷）和克里斯·墨菲（Chris Murphy，康涅狄格州）以及共和党参议员汤姆·科顿（Tom Cotton，阿肯色州）和凯蒂·布里特（Katie Britt，阿拉巴马州），上个月提出了另外一项更严格的法案。这项法案禁止13岁以下的儿童使用社交媒体平台，并要求青少年在获得父母同意后方能使用。该法案还将禁止这些公司通过算法向18岁以下的用户推荐任何内容。</p>
 <p>参议院多数党领袖、纽约州民主党人查克·舒默（Chuck Schumer）没有对具体立法发表意见，但上周告诉记者，“我认为我们需要某种形式的在线儿童保护措施”。</p>
 <h3>数据隐私</h3>
-<figure id="attachment_12731900" aria-describedby="caption-attachment-12731900" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/02/146696.jpg"><img class="size-large wp-image-12731900" src="https://i.epochtimes.com/assets/uploads/2021/02/146696-600x405.jpg" alt="" width="600" b="405" /></a><figcaption id="caption-attachment-12731900" class="wp-caption-text">科技公司和社交媒体平台收集用户数据，带来很大危害个人数据隐私的问题。(Justin Tallis/Getty Image)</figcaption></figure>
+<figure id="attachment_12731900" aria-describedby="caption-attachment-12731900" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/02/146696.jpg"><img decoding="async" class="size-large wp-image-12731900" src="https://i.epochtimes.com/assets/uploads/2021/02/146696-600x405.jpg" alt="" width="600" b="405" /></a><figcaption id="caption-attachment-12731900" class="wp-caption-text">科技公司和社交媒体平台收集用户数据，带来很大危害个人数据隐私的问题。(Justin Tallis/Getty Image)</figcaption></figure>
 <p>民主党参议员埃德·马基（Ed Markey，麻萨诸塞州）和共和党议员比尔·卡西迪（Bill Cassidy，路易斯安那州）上周重新提出一项法案，该法案将加大对在线儿童隐私的保护，禁止这些社交媒体公司收集青少年的个人数据，禁止针对儿童和青少年的定向广告，并创建一个“橡皮擦按钮”，能让父母和孩子在需要的情况下，删除所有个人数据。</p>
 <p>去年，众议院能源和商业委员会通过了一项两党法案。该法案将尽量减少这些公司对数据的收集，并将针对儿童的广告定为非法，该法案还赋予消费者就侵犯隐私权提起诉讼的更大权利。</p>
 <p>该委员会主席凯茜·麦克莫里斯·罗杰斯（Cathy McMorris Rodgers）已将此问题列为优先事项，并就数据隐私问题举行了多次听证会。</p>
 <h3>TikTok禁令</h3>
-<figure id="attachment_13989249" aria-describedby="caption-attachment-13989249" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/05/id13989249-165284.jpeg"><img class="size-large wp-image-13989249" src="https://i.epochtimes.com/assets/uploads/2023/05/id13989249-165284-600x385.jpeg" alt="" width="600" b="385" /></a><figcaption id="caption-attachment-13989249" class="wp-caption-text">过去几个月内，美国两党国会议员一直在推动法案，支持禁止TikTok。(Olivier Douliery/AFP via Getty Images)</figcaption></figure>
-<p>3月，众议院举行了关于TikTok危害美国<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%9B%BD%E5%AE%B6%E5%AE%89%E5%85%A8.md#1">国家安全</a>和希望禁止该应用程序的听证会。之后，立法者提出了一系列法案来禁止该社交媒体平台。在听证会上，针对TikTok与中共政府的关系、数据安全和应用程序上的有害内容等问题，两党议员都对该公司首席执行官周受资（Shou Zi Chew）进行了质询。</p>
-<p>美国关注的问题是谁拥有TikTok算法的密钥，以及谁从每天使用该应用程序的1.5亿美国人那里收集大量数据。据西方法律专家称，中共有关法律覆盖面非常广泛，要求中国的“任何组织或公民”“支持、协助和配合国家情报工作”，但没有界定到底什么是“情报工作”（详情请点击“<ahref=><a href="https://github.com/19920513/djy/blob/master/gb/23/3/23/n13956931.md#1" target="_blank" rel="noopener noreferrer">为何美国政府担心TikTok受中共影响</a>”）。</p>
+<figure id="attachment_13989249" aria-describedby="caption-attachment-13989249" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/05/id13989249-165284.jpeg"><img decoding="async" class="size-large wp-image-13989249" src="https://i.epochtimes.com/assets/uploads/2023/05/id13989249-165284-600x385.jpeg" alt="" width="600" b="385" /></a><figcaption id="caption-attachment-13989249" class="wp-caption-text">过去几个月内，美国两党国会议员一直在推动法案，支持禁止TikTok。(Olivier Douliery/AFP via Getty Images)</figcaption></figure>
+<p>3月，众议院举行了关于TikTok危害美国国家安全和希望禁止该应用程序的听证会。之后，立法者提出了一系列法案来禁止该社交媒体平台。在听证会上，针对TikTok与中共政府的关系、数据安全和应用程序上的有害内容等问题，两党议员都对该公司首席执行官周受资（Shou Zi Chew）进行了质询。</p>
+<p>美国关注的问题是谁拥有TikTok算法的密钥，以及谁从每天使用该应用程序的1.5亿美国人那里收集大量数据。据西方法律专家称，中共有关法律覆盖面非常广泛，要求中国的“任何组织或公民”“支持、协助和配合国家情报工作”，但没有界定到底什么是“情报工作”（详情请点击“<ahref=><a href="https://github.com/1992513/djy/blob/master/gb/23/3/23/n13956931.md#1" target="_blank" rel="noopener noreferrer">为何美国政府担心TikTok受中共影响</a>”）。</p>
 <p>到目前为止，已经有美国、英国议会、加拿大、比利时、荷兰、新西兰、欧盟和印度的联邦政府禁止官方设备使用TikTok。</p>
 <p>TikTok的算法被认为是其成功的关键。这些算法根据用户的行为给出推荐，从而推送他们喜欢和想看的视频。</p>
 <p>美国国会众议院能源和商务委员会委员会的主席、来自华盛顿州的共和党众议员凯茜?麦克莫里斯?罗杰斯（Cathy McMorris Rodgers）在听证会的开场白中明确对TikTok首席执行官周受资说，TikTok收集任何可以想像的数据，并受中共的操纵。</p>
 <p>“你们的平台应该被封禁。”她说。</p>
 <p>共和党参议员马克·卢比奥（Marco Rubio，佛罗里达州）发起了一项法案，禁止美国与TikTok的经济往来，该法案也会为行政部门创建一个新的框架，即阻止任何被视为敌对的外国应用程序。该法案由卢比奥以及民主党众议员拉亚·克里希纳莫提（Raja Krishnamoorthi，伊利诺伊州）和共和党众议员麦克·加拉格尔（Mike Gallagher，威斯康星州）共同发起。</p>
 <p>参议院情报委员会主席马克·沃纳（Mark Warner，弗吉尼亚州）和共和党参议员约翰·图恩（John Thune，南达科他州）发起的两党立法得到了广泛支持，该立法没有特别提到TikTok，但会给商务部提供审查的权力，并可限制外国对技术平台的威胁。白宫已表示将支持该法案。</p>
-<h3><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BA%BA%E5%B7%A5%E6%99%BA%E8%83%BD.md#1">人工智能</a></h3>
-<figure id="attachment_13965547" aria-describedby="caption-attachment-13965547" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/04/id13965547-f54eb92d564935dcb4c7f4d8b49f22a3.jpeg"><img class="size-large wp-image-13965547" src="https://i.epochtimes.com/assets/uploads/2023/04/id13965547-f54eb92d564935dcb4c7f4d8b49f22a3-600x400.jpeg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13965547" class="wp-caption-text">人工智能正在全面影响各行各业。专家们警告说，它可能会对社会和人类构成深远的风险。(Shutterstock)</figcaption></figure>
+<h3>人工智能</h3>
+<figure id="attachment_13965547" aria-describedby="caption-attachment-13965547" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/04/id13965547-f54eb92d564935dcb4c7f4d8b49f22a3.jpeg"><img decoding="async" class="size-large wp-image-13965547" src="https://i.epochtimes.com/assets/uploads/2023/04/id13965547-f54eb92d564935dcb4c7f4d8b49f22a3-600x400.jpeg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13965547" class="wp-caption-text">人工智能正在全面影响各行各业。专家们警告说，它可能会对社会和人类构成深远的风险。(Shutterstock)</figcaption></figure>
 <p>美国会面临的一个新问题是，人工智能（AI）聊天机器人ChatGPT等快速发展的产品开始进入市场，并可以在许多方面模仿人类行为，立法者是否应该采取行动进行监管。</p>
 <p>参议院领袖舒默已将新兴技术列为优先事项，认为美国需要领先于中国和其它关注人工智能产品监管的国家。他一直在与AI专家合作，并发布了监管的总体框架，包括增加对技术开发所涉及的人员和数据的披露，提高透明度，以及对机器人如何做出响应的解释。</p>
 <p>舒默曾表示，任何最终的监管都应该“防止对我们国家造成的潜在灾难性破坏，同时确保美国在这项变革性技术方面，取得进步并处于领先地位。”</p>
 <p>白宫也一直关注这个问题，最近宣布投资1.4亿美元建立七个新的人工智能研究机构。副总统贺锦丽周四（5月4日）会见了谷歌、微软和其他开发人工智能产品的公司的负责人。</p>
 <p>责任编辑：叶紫微#</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/18/n13953162.md#1">【内幕】TikTok和美国会的生死之战</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962800.md#1">【内幕】TikTok游说大军美国国会折戟</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/5/n13965811.md#1">少年沉迷于网络 摆脱社交媒体后分享好处</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/14/n13972905.md#1">过度使用社交媒体 会破坏你的记忆力</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/3/18/n13953162.md#1">【内幕】TikTok和美国会的生死之战</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/3/31/n13962800.md#1">【内幕】TikTok游说大军美国国会折戟</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/4/5/n13965811.md#1">少年沉迷于网络 摆脱社交媒体后分享好处</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/4/14/n13972905.md#1">过度使用社交媒体 会破坏你的记忆力</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/21/n11128349.md#1" target="_blank">明白人：“纪念”“烧木炭”而死的张思德</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/4/n10890780.md#1" target="_blank">天空出现“真善忍” 西澳女子圆梦</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/1/n10013328.md#1" target="_blank">文武：中共毁灭了中国社会“三权分立”的传统</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/20/1/9/n11780113.md#1" target="_blank">德国修炼者读《转法轮》见证神奇 受益良多</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/6/n13989274.md#1">【未解之谜】“美梦”成真？！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/26/n13981899.md#1">【杨延昭传奇】“潘湖浊，杨湖清” 天意明辨忠与奸</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/10/n13969696.md#1">【古道人生】同是卖泥丸 何以一个能治病一个医死人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/4/n13987863.md#1">中华传统母亲花是哪一种？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/17/n13931544.md#1">【医案】迅雷不及掩耳</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/10/n13993205.md#1">【净园财经】中共谋杀产业链的形成</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/10/n13993094.md#1">【新闻大家谈】不止惹翻加国 习或面临惊涛骇浪</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/9/n13992574.md#1">【未解之谜】挑战进化论的微生物界</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/9/n13991795.md#1">岳山：中南海可能曾因脱贫造假发生内讧</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/9/n13992253.md#1">中共报复性驱逐加外交官 特鲁多强硬回应</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/9/n13991876.md#1">北京顶级豪宅项目爆雷 75套豪宅被抵押</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/7/n13990666.md#1">70岁元华移居加拿大 与家人团聚含饴弄孙</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/9/n13992355.md#1">遭传转移8亿资产到美国 金马影帝徐峥回应</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/8/n13991550.md#1">曾任邓丽君经纪人 资深娱乐人管伟华病逝</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/8/n13990762.md#1">台湾小慧首晋级大胃王世界8强 破赤坂女王纪录</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/8/n13991678.md#1">微博头像已换 工作室改名 杨幂离开老东家</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/8/n13991180.md#1">白袜变黑很恶心 专家教你如何让它洁白如新</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/8/n13990965.md#1">除了房地产 哪些投资可以避险又增值？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/28/n13983839.md#1">黑胡椒抗癌 黄芪缓解哮喘 10种顶级草药激活免疫力</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/4/n13988093.md#1">胃酸逆流可引发癌前病变 防食道癌要记住这5点</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/9/n13991762.md#1">4个信号是肾脏在求救 医师：护肾这7件事很重要</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306413.md#1">立秋的著名成语  传递什么警讯？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303783.md#1">【未解之谜】美国日全食开启灾难之门 比格斯预言盘点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305642.md#1">宋孝宗“竞选”皇位  一猫和十美女如何起作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307724.md#1">【未解之谜】神农架野人之谜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308353.md#1">【马克时空】乌军以牙还牙 越境攻击俄库尔斯克</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308427.md#1">【漂流传奇】私房菜厨师：英国市集创业大公开</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306785.md#1">Costco再次打击非会员 这次是在入口处</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306829.md#1">陈梦战胜孙颖莎 球迷喝倒彩 背后黑幕重重</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306851.md#1">周星驰拍片曾资金不足 富豪出手只为演个角色</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306143.md#1">《死侍与金钢狼》票房惊人 席琳·狄翁逗趣恭喜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306732.md#1">章子怡带儿女出游 炎炎夏日陪玩全身包裹严实</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307988.md#1">子瑜感谢志效领导TWICE 难忘成员来家里玩</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307570.md#1">黄晓明贺表妹陈梦奥运夺冠 却遭友人诡异吐槽</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306209.md#1">营养师推荐一传统小吃 钙含量高豆浆25倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302749.md#1">肾功能不及格的10大征兆 多注意可预防洗肾</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308042.md#1">什么是“慢购物” 为何它能抢救你的荷包？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307219.md#1">如何去除衣服上的防晒乳污渍？ 这一物有奇效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306483.md#1">为何天气炎热时比较不会感觉饿？</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/5/8/n13991543.htm">美国会拟制定科技新法 从禁TikTok到规范AI</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/5/8/n13991543.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/5/8/n13991543.htm">美国会拟制定科技新法 从禁TikTok到规范AI</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/5/8/n13991543.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
